# help-bot

./: README.md  pyproject.toml
helpbot/: utils.py
helpbot/bot/: __init__.py  base.py  discord.py  openai.py  shell.py
helpbot/scripts/: discord.py  shell.py
