[tool.poetry]
name = "helpbot"
version = "0.1.0"
description = ""
authors = ["Harris Lapiroff <harris@freedom.press>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.4"
httpx = "^0.23.3"
wikipedia = "^1.4.0"
discord-py = "^2.2.2"
tiktoken = "^0.3.3"
numexpr = "^2.8.4"

[tool.poetry.scripts]
shell = "helpbot.scripts.shell:main"
discord = "helpbot.scripts.discord:main"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
